--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,8 +35,8 @@ jobs:
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./publish
 
-    - name: Upload Publish Directory as Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: blazor.trapistan-webapp-deployment-publish
-        path: ./publish
+    # - name: Upload Publish Directory as Artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: blazor.trapistan-webapp-deployment-publish
+    #     path: ./publish
