--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - '**/labs/app_service_demo/**'
-      - '**/.github/workflows/app-service-cicd.yml'
+      - './labs/app_service_demo/**'
+      - './.github/workflows/app-service-cicd.yml'
 
 jobs:
   build-and-deploy:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: '**/labs/app_service_demo/blazor.trapistan'
+        working-directory: './labs/app_service_demo/blazor.trapistan'
 
     steps:
     - name: Checkout
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore
 
     - name: Publish App
-      run: dotnet publish -c Release -o ../../publish
+      run: dotnet publish -c Release -o ../publish
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
