--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - './labs/app_service_demo/**'
-      - './.github/workflows/app-service-cicd.yml'
+      - 'labs/app_service_demo/**'
+      - '.github/workflows/app-service-cicd.yml'
 
 jobs:
   build-and-deploy:
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore
 
     - name: Publish App
-      run: dotnet publish -c Release -o ../publish
+      run: dotnet publish -c Release -o ../app-service-publish-publish
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -37,4 +37,4 @@ jobs:
         app-name: trapistan
         slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: labs/app_service_demo/publish
+        package: labs/app_service_demo/app-service-publish
