--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -37,4 +37,4 @@ jobs:
         app-name: trapistan
         slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: app-service-publish
+        package: '**/app_service_demo/app-service-publish'
