--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore
 
     - name: Publish App
-      run: dotnet publish -c Release -o ../app-service-publish-publish
+      run: dotnet publish -c Release -o ../app-service-publish
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -37,4 +37,4 @@ jobs:
         app-name: trapistan
         slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: '**/app_service_demo/app-service-publish'
+        package: '../app_service_demo/app-service-publish'
