--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,105 @@
 # Terraform
-**\.terraform/
-**\terraform.*
-**\.terraform.*
-**\*.tfstate
-**\*.tfstate.*
-**\.terraform.lock.hcl
-**\crash.log
+**/.terraform/
+**/terraform.*
+**/.terraform.*
+**/*.tfstate
+**/*.tfstate.*
+**/.terraform.lock.hcl
+**/crash.log
 
 # Azure Functions
 local.settings.json
 __pycache__/
 *.pyc
 
-# VSCode
-.vscode/
+# Azure App Service
+*.PublishSettings
+*.azurePubxml
 
-# Local Environment files
+# Azure DevOps
+.vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python
+**/__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# .NET
+**/bin/
+**/obj/
+*.dll
+*.exe
+*.pdb
+*.cache
+*.log
+*.csproj.user
+*.dbmdl
+*.jfm
+*.ide
+*/Debug
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+*.iml
+.idea/
+
+# Logs
+*.log
+logs/
+
+# Environment Files
 *.env
+.env.*
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.nfs*
+
+# Docker
+*.dockerignore
+Dockerfile
+docker-compose.yml
+docker-compose.override.yml
+
+# Azure Pipelines
+*.coverage
+*.coveragexml
+*.testresults
+*.trx
+*.runsettings
+*.coverage.info
