--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: './labs/app_service_demo/blazor.trapistan'
+        working-directory: './labs/app_service_demo'
 
     steps:
     - name: Checkout
@@ -29,7 +29,7 @@ jobs:
       run: dotnet restore
 
     - name: Publish App
-      run: dotnet publish ./blazor.trapistan.Web -c Release -o ../app-service-publish
+      run: dotnet publish ./blazor.trapistan/blazor.trapistan.Web -c Release -o ./app-service-publish
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -37,4 +37,4 @@ jobs:
         app-name: trapistan
         slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: '**labs/app_service_demo/app-service-publish/wwwroot'
+        package: ./app-service-publish
