--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -32,10 +32,16 @@ jobs:
     - name: Publish App
       run: dotnet publish ./blazor.trapistan/blazor.trapistan.Web -c Release -o ./app-service-publish
 
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-service-publish-folder
+        path: ./app-service-publish
+    
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: trapistan
         slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: '**/app-service-publish'
+        package: '**/app_service_demo/app-service-publish'
