--- a/.github/workflows/docker-acr-deploy.yml
+++ b/.github/workflows/docker-acr-deploy.yml
@@ -23,9 +23,7 @@ jobs:
     - name: 🔐 Azure Login
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: 🐳 Build Docker image
       run: |
