--- a/.github/workflows/docker-acr-deploy.yml
+++ b/.github/workflows/docker-acr-deploy.yml
@@ -22,6 +22,20 @@ jobs:
     - name: ⬇️ Checkout code
       uses: actions/checkout@v3
 
+
+
+    - name: 📁 Debug - Print Working Directory
+      run: |
+        pwd
+        echo "Current directory contents:"
+        ls -la
+        echo "Parent directory contents:"
+        ls -la ..
+        echo "Root directory structure:"
+        tree ../../../ -L 3
+
+
+      
     - name: 🔐 Azure Login
       uses: azure/login@v1
       with:
