--- a/.github/workflows/app-service-cicd.yml
+++ b/.github/workflows/app-service-cicd.yml
@@ -42,6 +42,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: trapistan-Blazor
-        slot-name: Production
+        # slot-name: Production
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: '**/app_service_demo/app-service-publish'
